---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
    - Bumped Advanced Artillery Remotes Continued to latest version (verbose logging is now off by default).
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2022-07-26
  Features:
    - Improved visibility for power switch and train stop status light indicators (via "Big Light")
    - Quicker map tagging using right-click (via "Quick Map Tag")
    - Thicker power cables and logic wires(via "Thicker Power Wires")
    - Show unfulfilled requests in the current logistic network (via "What's Missing?")
    - Rename locomotives, labs, roboports, and radars (via "Renamer")
    - Pick-up leftover items alongside inserters (via "Pick It Up")
    - Automatically fill buildings and vehicles with fuel when placing them down (via "Fill4Me")
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2022-07-20
  Changes:
    - Replaced "Construction Planner" with "Construction Planner Continued" mod. Although it should be a drop-in replacement, make sure to backup the savegame before updating the modpack.
    - Replaced "Quick Swap" with "Quickbar Vertical Swap" mod. Provides more features, and preserves blueprints on the quickbar (by default).
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2022-07-15
  Changes:
    - Bumped Pavement Drive Assist Continued mod version requirement.
    - Driving assistant and cruise control (from Pavement Drive Assist Continued) no longer require technology to be researched.
    - Disabld smart roads (from Pavement Drive Assist Continued).