@@ -29,7 +29,7 @@
         "EnableResearchQueue >= 1.0.4",
         "even-distribution >= 1.0.10",
         "extended-descriptions >= 1.0.16",
-        "factoryplanner >= 1.1.50",
+        "factoryplanner >= 1.1.78",
         "FactorySearch >= 1.8.0",
         "far-reach >= 1.1.2",
         "Fill4Me >= 0.10.0",
